README changes for AdaptiveCVInstances